--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 :root {
+  --white: #fff;
+  --black: #000;
   --text: #000;
   --text-inverted: #fff;
-  --white: #fff;
+  --text-fade: #888;
   --bkgnd: #fff;
   --miss: #888;
   --found: #cb4;
   --hit: #0a5;
   --icon-gray: #aaa;
   --button-gray: #ccc;
+  --border-gray: #ddd;
   --active: #7bf;
   --overlay: rgba(255,255,255,.8);
   --message: #eee;
@@ -21,23 +24,40 @@
 }
 
 .dark {
-  --text: #fff;
-  --text-inverted: #000;
-  --bkgnd: #000;
-  --overlay: rgba(64,64,64,.5);
+  --text: #bcb;
+  --text-inverted: #00201f;
+  --text-fade: #566;
+  --bkgnd: #00201f;
+  --miss: #344;
+  --found: #cb4;
+  --hit: #0a5;
+  --icon-gray: #677;
+  --button-gray: #566;
+  --border-gray: #344;
+  --active: #aba;
+  --overlay: rgba(64,72,72,.8);
+  --message: #192929;
+  --message-success: #052;
+  --button-success: #084;
+  --active-shadow: 0 0 6px rgba(210,255,210,1);
+  --overlay-shadow: 0 0 25px rgba(0,0,0,.25);
 }
 
 .color-blind {
   --found: #69c;
-  --hit: #0a5;
 }
 
 html {
   font-family: -apple-system, 'Segoe UI', Roboto, Ubuntu, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.25rem;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
+  height: 100%;
+  padding: 0;
   margin: 0;
   color: var(--text);
   background-color: var(--bkgnd);
@@ -45,8 +65,8 @@ body {
 
 #app {
   width: 100%;
-  max-width: 500px;
-  height: 100vh;
+  max-width: 768px;
+  height: 100%;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -58,11 +78,11 @@ body {
 }
 
 .fade {
-  color: var(--miss);
+  color: var(--text-fade);
 }
 
 .fade a {
-  color: var(--miss);
+  color: var(--text-fade);
 }
 
 .fade a:hover {
@@ -94,7 +114,7 @@ h3 {
 
 header, hr {
   border: 0 none;
-  border-bottom: 1px solid var(--button-gray);
+  border-bottom: 1px solid var(--border-gray);
 }
 
 header {
@@ -121,7 +141,7 @@ header h1 {
 header h1 em {
   display: block;
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 1.25rem;
   font-family: serif;
   text-transform: none;
   text-align: center;
@@ -173,6 +193,25 @@ header button:hover {
   margin-left: auto;
 }
 
+#board-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 100%;
+  min-width: 250px;
+  max-width: 325px;
+  margin: 0 auto;
+}
+
 #board {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -181,26 +220,43 @@ header button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 300px;
-  height: 360px;
-  margin: auto auto;
+  width: 100%;
+  height: 100%;
+  min-height: 300px;
+  max-height: 390px;
+}
+
+#board .row {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 #keyboard {
-  margin: 1rem 0;
+  margin: 1rem 5px 0;
+}
+
+#keyboard .row {
+  width: 100%;
+  margin: 0 auto 5px;
+}
+
+#keyboard button:active {
+  color: var(--text-inverted);
 }
 
 #keyboard button:active svg {
   fill: var(--text-inverted);
 }
 
+#keyboard button.miss {
+  color: var(--text-inverted);
+}
+
 .row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   margin-bottom: 5px;
 }
 
@@ -213,8 +269,8 @@ header button:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+      -ms-flex: 1 10px;
+          flex: 1 10px;
   background: none;
   border: 0 none;
   -webkit-box-align: center;
@@ -226,6 +282,7 @@ header button:hover {
   font-weight: var(--bold);
   text-transform: uppercase;
   margin: 0 5px 0 0;
+  padding: 0;
   border-radius: var(--border-radius-button);
 }
 
@@ -235,18 +292,18 @@ header button:hover {
 
 .row .half {
   -webkit-box-flex: .5;
-      -ms-flex: .5;
-          flex: .5;
+      -ms-flex: .5 5px;
+          flex: .5 5px;
 }
 
 .row .one-and-a-half {
   -webkit-box-flex: 1.5;
-      -ms-flex: 1.5;
-          flex: 1.5;
+      -ms-flex: 1.5 15px;
+          flex: 1.5 15px;
 }
 
 .row .tile {
-  border: 2px solid var(--button-gray);
+  border: 2px solid var(--border-gray);
   font-size: 2rem;
   line-height: 1rem;
 }
@@ -264,6 +321,7 @@ header button:hover {
 .row button {
   font-size: .8rem;
   height: 3.5rem;
+  color: var(--text);
   background-color: var(--button-gray);
   cursor: pointer;
 }
@@ -274,7 +332,7 @@ header button:hover {
 
 .row .miss, .row .found, .row .hit {
   border: 0 none;
-  color: var(--text-inverted);
+  color: var(--white);
 }
 
 .row .miss {
@@ -318,7 +376,7 @@ header button:hover {
 
 .overlay .body .message {
   padding: 1rem;
-  margin: 0 -1.5rem 1rem;
+  margin: 0 -1.5rem .5rem;
   background-color: var(--message);
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   display: -webkit-box;
@@ -347,7 +405,7 @@ header button:hover {
 
 .overlay .body header h2 {
   position: absolute;
-  top: 1.25rem;
+  top: 1rem;
   left: 50%;
   margin: 0;
   -webkit-transform: translate(-50%, 0);
@@ -364,6 +422,7 @@ header button:hover {
 }
 
 .example .row .tile {
+  font-size: 1.15rem;
   height: 2.75rem;
 }
 
@@ -391,7 +450,7 @@ header button:hover {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: .75rem 0;
-  border-top: 1px solid var(--button-gray);
+  border-top: 1px solid var(--border-gray);
 }
 
 .switch {
@@ -494,10 +553,12 @@ header button:hover {
   padding: 1rem;
   border-radius: var(--border-radius-button);
   cursor: pointer;
+  color: var(--black);
 }
 
 #share:active {
   background-color: var(--text);
+  color: var(--text-inverted);
 }
 
 #share:active svg {
@@ -546,5 +607,25 @@ header button:hover {
   }
   to {
     opacity: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .overlay .body {
+    width: 100%;
+    min-height: 100%;
+    background-color: var(--bkgnd);
+    margin: 0;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    padding: 0 1.5rem 1rem;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .overlay .message {
+    padding: 1rem;
+    background-color: var(--message);
+    border-radius: 0;
   }
 }
