--- a/css/styles.scss
+++ b/css/styles.scss
@@ -215,6 +215,10 @@ header {
    }
 
    button {
+    svg {
+      fill: var(--text)
+    }
+
      &:active {
        color: var(--text-inverted);
       
