--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,41 @@ header button:hover {
           flex: 1;
 }
 
+#board .row .miss, #board .row .found, #board .row .hit {
+  -webkit-animation: zoominout .3s forwards ease-out;
+          animation: zoominout .3s forwards ease-out;
+}
+
+@-webkit-keyframes zoominout {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  30% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes zoominout {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  30% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 #keyboard {
   margin: 1rem 5px 0;
 }
@@ -359,6 +394,32 @@ header button:hover {
   left: 0;
   background-color: var(--overlay);
   z-index: 1000;
+  -webkit-animation: fadein .3s forwards ease-out;
+          animation: fadein .3s forwards ease-out;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .overlay.hidden {
@@ -376,6 +437,33 @@ header button:hover {
   padding: 0 1.5rem 1rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  position: relative;
+  -webkit-animation: movein .3s forwards ease-out;
+          animation: movein .3s forwards ease-out;
+}
+
+@-webkit-keyframes movein {
+  from {
+    top: 1rem;
+  }
+  30% {
+    top: 1rem;
+  }
+  to {
+    top: 0;
+  }
+}
+
+@keyframes movein {
+  from {
+    top: 1rem;
+  }
+  30% {
+    top: 1rem;
+  }
+  to {
+    top: 0;
+  }
 }
 
 .overlay .body .message {
