--- a/css/styles.scss
+++ b/css/styles.scss
@@ -203,6 +203,16 @@ header {
 
   .row {
     flex: 1;
+
+    .miss, .found, .hit {
+      animation: zoominout .3s forwards ease-out;
+
+      @keyframes zoominout {
+        from { transform: scale(1); }
+        30% { transform: scale(1.1); }
+        to { transform: scale(1); }
+      }
+    }
   }
  }
 
@@ -320,6 +330,13 @@ header {
   left: 0;
   background-color: var(--overlay);
   z-index: 1000;
+  animation: fadein .3s forwards ease-out;
+
+  @keyframes fadein {
+    from { opacity: 0; }
+    30% { opacity: 0; }
+    to { opacity: 1; }
+  }
 
   &.hidden {
     display: none;
@@ -334,6 +351,14 @@ header {
     box-shadow: var(--overlay-shadow);
     padding: 0 1.5rem 1rem;
     box-sizing: border-box;
+    position: relative;
+    animation: movein .3s forwards ease-out;
+
+    @keyframes movein {
+      from { top: 1rem; }
+      30% { top: 1rem; }
+      to { top: 0; }
+    }
 
     .message {
       padding: 1rem;
