--- a/css/styles.scss
+++ b/css/styles.scss
@@ -205,12 +205,13 @@ header {
     flex: 1;
 
     .miss, .found, .hit {
-      animation: zoominout .3s forwards ease-out;
+      position: relative;
+      animation: reveal .5s forwards ease-out;
 
-      @keyframes zoominout {
-        from { transform: scale(1); }
-        30% { transform: scale(1.1); }
-        to { transform: scale(1); }
+      @keyframes reveal {
+        from { bottom: 0; }
+        30% { bottom: .5rem; }
+        to { bottom: 0; }
       }
     }
   }
