--- a/css/styles.scss
+++ b/css/styles.scss
@@ -252,6 +252,18 @@ header {
     margin-bottom: 0;
   }
 
+  &.wrong {
+    position: relative;
+    animation: reject .3s forwards ease-out;
+
+    @keyframes reject {
+      from { left: 0; }
+      30% { left: .5rem; }
+      60% { left: -.5rem; }
+      to { left: 0; }
+    }
+  }
+
   .tile, button, .spacer {
     display: flex;
     flex: 1 10px;
@@ -404,6 +416,16 @@ header {
     .tile {
       font-size: 1.15rem;
       height: 2.75rem;
+
+      &.miss, &.found, &.hit {
+        animation: pop .5s forwards ease-out;
+  
+        @keyframes pop {
+          from { transform: scale(1); }
+          30% { transform: scale(1.1); }
+          to { transform: scale(1); }
+        }
+      }
     }
   }
   
@@ -560,13 +582,12 @@ header {
       box-shadow: none;
       padding: 0 1.5rem 1rem;
       box-sizing: border-box;
-    }
 
-    .message {
-      padding: 1rem;
-      background-color: var(--message);
-      border-radius: 0;
+      .message {
+        padding: 1rem;
+        background-color: var(--message);
+        border-radius: 0;
+      }
     }
-
   }
 }
