--- a/css/styles.css
+++ b/css/styles.css
@@ -63,20 +63,6 @@ body {
   background-color: var(--bkgnd);
 }
 
-#app {
-  width: 100%;
-  max-width: 768px;
-  height: 100%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 .fade {
   color: var(--text-fade);
 }
@@ -193,6 +179,20 @@ header button:hover {
   margin-left: auto;
 }
 
+#app {
+  width: 100%;
+  max-width: 768px;
+  height: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 #board-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -206,10 +206,8 @@ header button:hover {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  width: 100%;
-  min-width: 250px;
-  max-width: 325px;
   margin: 0 auto;
+  width: 100%;
 }
 
 #board {
@@ -220,10 +218,13 @@ header button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 0 2rem;
   width: 100%;
+  min-width: 250px;
+  max-width: 400px;
   height: 100%;
   min-height: 300px;
-  max-height: 390px;
+  max-height: 480px;
 }
 
 #board .row {
