--- a/css/styles.scss
+++ b/css/styles.scss
@@ -68,15 +68,6 @@ body {
   background-color: var(--bkgnd);
 }
 
-#app {
-  width: 100%;
-  max-width: 768px;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
-
 .fade {
   color: var(--text-fade);
 
@@ -182,24 +173,34 @@ header {
   margin-left: auto;
 }
 
+#app {
+  width: 100%;
+  max-width: 768px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
 #board-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  width: 100%;
-  min-width: 250px;
-  max-width: 325px;
   margin: 0 auto;
+  width: 100%;
  }
 
 #board {
   display: flex;
   flex-direction: column;
+  margin: 0 2rem;
   width: 100%;
+  min-width: 250px;
+  max-width: 400px;
   height: 100%;
   min-height: 300px;
-  max-height: 390px;
+  max-height: 480px;
 
   .row {
     flex: 1;
