--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,14 @@
   --found: #cb4;
   --hit: #0a5;
   --icon-gray: #aaa;
-  --button-gray: #ccc;
   --border-gray: #ddd;
   --active: #7bf;
   --overlay: rgba(255,255,255,.8);
   --message: #eee;
   --message-success: #bfc;
+  --button-gray: #ccc;
+  --button-danger: #f55;
+  --button-primary: #49f;
   --button-success: #9da;
   --border-radius-button: 3px;
   --border-radius: 6px;
@@ -32,12 +34,14 @@
   --found: #cb4;
   --hit: #0a5;
   --icon-gray: #677;
-  --button-gray: #566;
   --border-gray: #344;
   --active: #aba;
   --overlay: rgba(64,72,72,.8);
   --message: #192929;
   --message-success: #052;
+  --button-gray: #566;
+  --button-danger: #c33;
+  --button-primary: #36c;
   --button-success: #084;
   --active-shadow: 0 0 6px rgba(210,255,210,1);
   --overlay-shadow: 0 0 25px rgba(0,0,0,.25);
@@ -385,6 +389,12 @@ header button:hover {
           flex: 1.5;
 }
 
+.row .two {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
 .row .tile {
   border: 2px solid var(--border-gray);
   font-size: 2rem;
@@ -410,7 +420,7 @@ header button:hover {
 }
 
 .row button:active {
-  background-color: var(--text);
+  background-color: var(--text) !important;
 }
 
 .row .miss, .row .found, .row .hit {
