--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,8 +17,8 @@
   --message-success: #bfc;
 
   --button-gray: #ccc;
-  --button-danger: #f55;
-  --button-primary: #49f;
+  --button-danger: #f88;
+  --button-primary: #8be;
   --button-success: #9da;
 
   --button-hover: brightness(90%);
@@ -48,8 +48,8 @@
   --message-success: #052;
 
   --button-gray: #566;
-  --button-danger: #c33;
-  --button-primary: #36c;
+  --button-danger: #a44;
+  --button-primary: #47a;
   --button-success: #084;
 
   --button-hover: brightness(110%);
