--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,7 +21,7 @@
   --button-primary: #aaa;
   --button-success: #9da;
 
-  --button-hover: brightness(90%);
+  --button-hover: brightness(95%);
 
   --border-radius-button: 3px;
   --border-radius: 6px;
@@ -52,7 +52,7 @@
   --button-primary: #405050;
   --button-success: #084;
 
-  --button-hover: brightness(110%);
+  --button-hover: brightness(107%);
 
   --active-shadow: 0 0 6px rgba(210,255,210,1);
   --overlay-shadow: 0 0 25px rgba(0,0,0,.25);
@@ -568,6 +568,10 @@ header {
   border-radius: var(--border-radius-button);
   cursor: pointer;
   color: var(--black);
+
+  &:hover {
+    filter: var(--button-hover);
+  }
 
   &:active {
     background-color: var(--text);
