--- a/css/styles.scss
+++ b/css/styles.scss
@@ -184,10 +184,7 @@ header {
 }
 
 #app {
-  width: 100%;
-  max-width: 768px;
   height: 100%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
@@ -228,8 +225,14 @@ header {
   }
  }
 
- #keyboard {
+ #keyboard-container {
    margin: 1rem 5px 0;
+ }
+
+ #keyboard {
+   width: 100%;
+   max-width: 768px;
+   margin: 0 auto;
 
    .row {
      width: 100%;
