--- a/css/styles.scss
+++ b/css/styles.scss
@@ -120,7 +120,7 @@ header, hr {
 
 header {
   display: flex;
-  padding: .75rem 0 1rem;
+  padding: .75rem .75rem 1rem;
   margin-bottom: 1rem;
   position: relative;
 
@@ -612,6 +612,11 @@ header {
 }
 
 @media (max-width: 576px) {
+  header {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .overlay {
     .body {
       width: 100%;
