--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,8 +9,9 @@
   --miss: #888;
   --found: #cb4;
   --hit: #0a5;
-  --icon-gray: #aaa;
-  --border-gray: #ddd;
+  --icon: #aaa;
+  --border: #ddd;
+  --tile-border: #ddd;
   --active: #7bf;
   --overlay: rgba(255,255,255,.8);
   --message: #eee;
@@ -21,13 +22,13 @@
   --button-primary: #aaa;
   --button-success: #9da;
 
+  --active-shadow: 0 0 6px rgba(48,124,255,1);
+  --overlay-shadow: 0 0 25px rgba(0,0,0,.25);
+
   --button-hover: brightness(95%);
 
   --border-radius-button: 3px;
   --border-radius: 6px;
-
-  --active-shadow: 0 0 6px rgba(48,124,255,1);
-  --overlay-shadow: 0 0 25px rgba(0,0,0,.25);
 
   --bold: 600;
 }
@@ -40,8 +41,9 @@
   --miss: #344;
   --found: #cb4;
   --hit: #0a5;
-  --icon-gray: #677;
-  --border-gray: #344;
+  --icon: #677;
+  --border: #344;
+  --tile-border: #344;
   --active: #aba;
   --overlay: rgba(64,72,72,.8);
   --message: #192929;
@@ -56,6 +58,34 @@
 
   --active-shadow: 0 0 6px rgba(210,255,210,1);
   --overlay-shadow: 0 0 25px rgba(0,0,0,.25);
+}
+
+.ukraine {
+  --text: #234;
+  --text-inverted: #bbc;
+  --text-fade: #567;
+  --bkgnd: #fff;
+  --miss: #446;
+  --found: #cb0;
+  --hit: #093;
+  --icon: #bcd;
+  --border: #bcd;
+  --tile-border: #446;
+  --active: #fff;
+  --overlay: rgba(64,64,96,.8);
+  --message: #192929;
+  --message: #eee;
+  --message-success: #bfc;
+
+  --button-gray: #eee;
+  --button-danger: #a98;
+  --button-primary: #a98;
+  --button-success: #9da;
+
+  --active-shadow: 0 0 6px rgba(255,255,255,1);
+  --overlay-shadow: 0 0 25px rgba(0,0,0,.25);
+
+  --button-hover: brightness(95%);
 }
 
 .color-blind {
@@ -76,6 +106,12 @@ body {
   margin: 0;
   color: var(--text);
   background-color: var(--bkgnd);
+  transition: background .2s ease-in-out;
+
+  &.ukraine {
+    background: center / cover no-repeat url("data:image/svg+xml,%3Csvg width='1000' height='1000' viewBox='0 0 1000 1000' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1000' height='1000' fill='%23F9DC06'/%3E%3Crect width='1000' height='500' fill='%232565E0'/%3E%3C/svg%3E%0A");
+    backdrop-filter: blur(10px);
+  }
 }
 
 .fade {
@@ -115,7 +151,7 @@ h3 {
 
 header, hr {
   border: 0 none;
-  border-bottom: 1px solid var(--border-gray);
+  border-bottom: 1px solid var(--border);
 }
 
 header {
@@ -143,11 +179,60 @@ header {
     }
   }
 
+  #russianShip {
+    display: none;
+  }
+
   button {
-    fill: var(--icon-gray);
+    fill: var(--icon);
 
     &:hover {
       fill: var(--text);
+    }
+  }
+}
+
+.ukraine {
+  header {
+    h1 {
+      display: none;
+    }
+
+    button {
+      z-index: 2;
+    }
+
+    #russianShip {
+      display: block;
+      order: 2;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+      width: 60%;
+      height: 100%;
+      text-align: center;
+
+      div {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        background: center / contain no-repeat url("data:image/svg+xml,%3Csvg width='100' height='27' viewBox='0 0 100 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_534_6095)'%3E%3Cpath d='M1.29365 16.6062C7.00857 17.5084 14.8919 19.034 17.7484 19.6309C18.0273 19.6868 18.2599 19.7309 18.4463 19.7629L18.5114 19.0195C18.2166 18.694 17.9373 18.2832 17.9749 17.8527C17.977 17.8292 17.979 17.8058 17.9811 17.7823L14.5859 17.4852L14.6113 17.1957L18.0377 17.4955C18.5669 15.862 21.5404 16.3824 21.385 18.159C21.3152 18.9572 20.4949 19.2324 20.4949 19.2324L20.4518 19.7255L23.4636 19.989L24.2364 17.0126L25.402 17.1146L25.4753 16.2772L26.3827 16.3566L26.3095 17.194L27.2169 17.2734L28.5557 16.6571L29.1033 16.705L29.1704 15.9381L30.117 16.0209L30.0499 16.7878L32.522 17.0041L32.9204 16.2346L34.7744 16.3968L35.2456 17.408L36.4738 17.5154L36.558 16.5528L36.7927 16.5734C36.6642 16.4202 36.5868 16.2241 36.6059 16.005C36.6429 15.5824 37.0172 15.2682 37.4397 15.3051C37.8621 15.3421 38.1762 15.7165 38.1392 16.1392C38.1207 16.3505 38.0176 16.5386 37.8566 16.6664L38.9987 16.7664L39.1008 15.6003L38.6314 15.5592L38.7909 13.7358L40.3555 13.8726L40.641 10.6092L40.8757 10.6297L40.5902 13.8932L41.7793 13.9972L41.8334 13.3789L42.6 13.446L42.5459 14.0643L43.7428 14.169L43.8558 12.8777C43.4609 12.7958 43.1665 12.5571 43.1898 12.2911C43.2165 11.9858 43.6289 11.7775 44.1139 11.8199C44.5989 11.8623 44.9688 12.1392 44.9421 12.4444C44.9188 12.7105 44.5953 12.8951 44.1844 12.9064L44.0714 14.1977L45.4873 14.3216L45.5647 13.4373L46.0263 13.4777L45.9489 14.362L47.4743 14.4955L48.8205 11.1828L48.0262 10.0803L47.5866 10.8698L46.4366 10.7692L47.4348 9.27148L46.7876 8.37896L46.952 8.21196L47.734 8.82451L48.0785 8.31052L48.9547 8.38717L48.4205 9.35772L49.2837 10.0326L50.278 7.58817L50.6143 7.6176L51.138 4.96641C50.7925 5.85096 50.2814 6.28729 50.2814 6.28729L48.8285 5.95514L50.2585 2.85489L51.5443 3.38534C51.5443 3.38534 51.534 3.50273 51.5013 3.69701L51.7203 3.71618L51.7164 4.03127L54.0785 4.33256C54.0785 4.33256 54.0258 4.93517 53.531 5.36504C53.0362 5.7949 52.6372 5.76 52.6372 5.76L51.7164 4.66215L51.7197 7.14652L54.6768 7.40523L55.355 -0.347141L55.5897 -0.326609L54.9122 7.41794L56.0699 7.51923L56.0494 7.75401L54.8916 7.65272L54.8177 8.49793L55.1932 8.53078L55.1726 8.76556L54.7971 8.73271L54.7074 9.75793L55.0829 9.79078L55.0624 10.0256L52.3244 9.78602L52.4136 10.748L53.5245 10.8452L53.5039 11.08L52.44 10.9869L52.486 11.543L53.456 11.6278L53.4355 11.8626L52.5046 11.7812L52.6228 13.1321L53.3113 13.1923L53.2907 13.4271L52.6414 13.3703L52.6874 13.9264L53.2428 13.975L53.2222 14.2097L52.7138 14.1652L52.8601 15.8262L54.1665 15.9405L54.0645 17.1066L52.938 17.008L52.632 20.5063L53.8657 21.0006L53.9335 20.2259L54.5906 20.2834L54.7098 18.9216L54.9445 18.9422L54.8253 20.3039L55.4824 20.3614L55.3729 21.6135L55.9894 21.8646L56.8374 20.1014L58.1829 20.2191L58.2877 19.0217L59.6489 19.1408L59.7666 17.7947L60.0013 17.8153L59.8835 19.1613L61.3386 19.2886L61.8745 17.7583L63.2118 16.2587L63.9002 16.3189L64.2165 12.7033C63.5294 13.8892 62.422 15.0146 62.422 15.0146L61.361 13.8966L63.521 8.3998L64.9431 9.08412L65.0677 7.65978L65.3024 7.68031L65.1695 9.19857L65.4195 9.31506C65.4195 9.31506 65.2871 9.92648 65.0367 10.7168L65.0305 10.7873L66.3213 10.9002L66.2282 11.9645C66.4407 11.5178 66.8433 11.1509 67.3357 11.2886C68.1669 11.519 69.1206 12.2412 68.7569 12.9744C68.6129 13.2693 68.3403 13.4111 68.0128 13.4613L67.9943 13.6726L65.768 13.8011L65.9973 11.1794L65.4184 11.1287L64.9549 16.427L65.6824 16.4906L66.1457 19.5752L67.6711 19.7086L68.6123 17.3305L74.4012 17.837L74.4405 20.6321L76.7646 21.9079L76.8201 21.274L77.7745 21.3575L78.0492 20.38C77.9251 20.2666 77.8528 20.1026 77.8685 19.9226C77.8959 19.6095 78.1766 19.3739 78.4896 19.4012C78.8025 19.4286 79.038 19.7095 79.0107 20.0225C78.9942 20.2103 78.8873 20.3508 78.7448 20.4487L79.0062 23.1371L79.3595 23.3336L79.4266 22.5666L80.0055 22.6173L79.798 24.9886L81.1827 25.1097L81.0752 26.3384L85.8218 26.7537L86.1148 23.4041L88.446 23.6081L88.6117 21.7142L89.4722 21.7895L89.4948 21.5312L89.1585 21.5018L88.8096 20.0833L90.6042 18.8524L91.3808 21.6883L90.5751 21.6178L90.5525 21.8761L91.4912 21.9582L91.3255 23.8521L96.2383 24.2819L97.7514 28.3415L106.151 29.0764L106.075 29.9529L107.53 30.0802L104.622 33.1301L106.021 34.3841L105.825 36.6302L101.707 36.2699L100.186 35.0052L7.66561 26.9107C7.66561 26.9107 5.748 20.7076 0.868956 16.9555C0.679255 16.7812 0.952183 16.5448 1.29434 16.5984L1.29365 16.6062ZM67.4213 13.4647C67.1012 13.4288 66.7774 13.3453 66.4785 13.2482C66.3326 13.2039 66.2391 13.1011 66.1797 12.9697L66.1331 13.5019L67.4219 13.4569L67.4213 13.4647ZM78.5325 20.5327C78.4927 20.5371 78.4522 20.5493 78.4131 20.5459C78.3661 20.5418 78.3284 20.5227 78.29 20.5115L78.0483 21.3814L78.3378 21.4068L78.2248 22.6981L78.7739 22.9985L78.5325 20.5327ZM78.0379 24.8346L78.1474 24.8442L78.9728 23.7887L78.1679 23.3476L78.0379 24.8346ZM79.3183 23.9845L78.6168 24.8852L79.2348 24.9393L79.3183 23.9845ZM76.6525 23.4595L76.7313 22.5595L74.4748 21.3211L74.5012 23.2713L76.6525 23.4595ZM54.6719 7.64138L51.7383 7.38472L51.7408 7.71615L52.1555 7.75243L52.2041 8.27716L54.6058 8.48728L54.6797 7.64206L54.6719 7.64138ZM54.487 9.75441L54.5767 8.7292L52.222 8.52319L52.3123 9.56415L54.487 9.75441Z' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='53.5' cy='16.5' r='2.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='79' cy='1' r='4' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='56.5' cy='13.5' r='3.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='57.5' cy='8.5' r='3.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='74.5' cy='4.5' r='3.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='62.5' cy='11.5' r='4.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='61.5' cy='4.5' r='4.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='72.5' cy='-0.5' r='4.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='68.5' cy='6.5' r='5.5' fill='%23253041'/%3E%3Ccircle opacity='0.4' cx='65.5' cy='-0.5' r='3.5' fill='%23253041'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_534_6095'%3E%3Crect width='100' height='27' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+      }
+        
+      span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #4070ff;
+        font-size: 1.5rem;
+        font-weight: 600;
+        white-space: nowrap;
+      }
     }
   }
 }
@@ -339,7 +424,7 @@ header {
   }
 
   .tile {
-    border: 2px solid var(--border-gray);
+    border: 2px solid var(--tile-border);
     font-size: 2rem;
     line-height: 1rem; 
 
@@ -480,7 +565,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: .75rem 0;
-  border-top: 1px solid var(--border-gray);
+  border-top: 1px solid var(--border);
 }
 
 .switch {
