--- a/css/styles.scss
+++ b/css/styles.scss
@@ -675,7 +675,7 @@ header {
 
 .alert {
   position: fixed;
-  bottom: .33rem;
+  bottom: 0;
   margin-left: 50%;
   padding: .5rem 1rem;
   transform: translate(-50%, -50%);
